--- a/Blog/Angular-blog/src/app/components/small-card/small-card.html
+++ b/Blog/Angular-blog/src/app/components/small-card/small-card.html
@@ -1,1 +1,14 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+    <div class="container__small-card-content">
+        <div class="small-card__picture">
+                <img 
+                src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="Big Card Image" height="200px">
+            </div>
+            <div class="small-card__title">
+                <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+            </div>
+    </div>
+    <div class="container__small-card-separator">
+        <hr>
+    </div>
+</div>
