feat: Add the menu bar
Drawing the menu bar structure

--- a/Blog/Angular-blog/src/app/components/menu-bar/menu-bar.html
+++ b/Blog/Angular-blog/src/app/components/menu-bar/menu-bar.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul class="menu-bar__list">
+        <li><a href="https://www.linkedin.com/in/vitor-manzano-345003305/" target="_blank">Linkedin</a></li>
+        <li><a href="https://github.com/vitormanzano" target="_blank">Github</a></li>
+        <li><a href="#">Youtube</a></li>
+    </ul>
+</div>
