feat: Testing responsive design

--- a/Blog/Angular-blog/src/app/components/big-card/big-card.html
+++ b/Blog/Angular-blog/src/app/components/big-card/big-card.html
@@ -1,7 +1,7 @@
 <div class="container__big-card">
     <div class="big-card__picture">
         <img 
-        src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="Big Card Image" height="200px">
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQztf4wv97iSs2GQSejSJAJ8zsVD2ZNbeNwMA&s" alt="Big Card Image" height="200px">
     </div>
     <a href="">
 
