feat: components dynamic properties

--- a/Blog/Angular-blog/src/app/components/big-card/big-card.html
+++ b/Blog/Angular-blog/src/app/components/big-card/big-card.html
@@ -1,18 +1,18 @@
 <div class="container__big-card">
     <div class="big-card__picture">
         <img 
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQztf4wv97iSs2GQSejSJAJ8zsVD2ZNbeNwMA&s" alt="Big Card Image" height="200px">
+        [src]="photoCover" alt="Big Card Image" height="200px">
     </div>
     <a href="">
 
     </a>
     <div class="big-card__title">
-        <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+        <h1><a href="#">{{ cardTitle }}</a></h1>
     </div>
     <div class="big-card__description">
         <p>
             <a href="#">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolorum eos amet dignissimos ullam officia voluptatum reprehenderit cumque impedit placeat animi neque, aspernatur nulla illo ex a? Ipsa, officiis in.
+                {{ cardDescription }}
             </a>
         </p>
     </div>
