--- a/Blog/Angular-blog/src/app/components/small-card/small-card.html
+++ b/Blog/Angular-blog/src/app/components/small-card/small-card.html
@@ -2,10 +2,10 @@
     <div class="container__small-card-content">
         <div class="small-card__picture">
                 <img 
-                src="https://lumiere-a.akamaihd.net/v1/images/au_portrait_grid_marvel_logo_2025_mobile_1ad65200.png" alt="Big Card Image" height="200px">
+                [src]="photoCover" alt="Big Card Image" height="200px">
             </div>
             <div class="small-card__title">
-                <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+                <h1><a href="#">{{ cardTitle }}</a></h1>
             </div>
     </div>
     <div class="container__small-card-separator">
