--- a/Blog/Angular-blog/src/styles.css
+++ b/Blog/Angular-blog/src/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     background-color: #111111;
     color: white;
-    font-family: 'Segoe UI'
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
