feat: Setting the page content dynamic when click in a card

--- a/Blog/Angular-blog/src/app/components/menu-bar/menu-bar.css
+++ b/Blog/Angular-blog/src/app/components/menu-bar/menu-bar.css
@@ -1,5 +1,5 @@
 .container__menu-bar {
-    margin-top: 20px;
+    margin: 10px 0;
 }
 
 .menu-bar__list {
@@ -13,5 +13,5 @@
 }
 
 .menu-bar__list li a {
-    font-size: 24px;
+    font-size: 16px;
 }
