--- a/Blog/Angular-blog/src/app/pages/home/home.html
+++ b/Blog/Angular-blog/src/app/pages/home/home.html
@@ -1,27 +1,29 @@
-<app-menu-bar></app-menu-bar>
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card photoCover="https://lumiere-a.akamaihd.net/v1/images/iron_man_marvel_d9ce0209.jpeg?region=36,0,713,399"
-            cardTitle="NOVO HOMEM DE FERRO ANUNCIADO"
-            cardDescription="MARVEL ANUNCIA NOVO HOMEM DE FERRO, E NÃO É O TONY STARK">
+        <app-big-card 
+        Id = "1"
+        photoCover="https://lumiere-a.akamaihd.net/v1/images/iron_man_marvel_d9ce0209.jpeg?region=36,0,713,399"
+        cardTitle="NOVO HOMEM DE FERRO ANUNCIADO"
+        cardDescription="MARVEL ANUNCIA NOVO HOMEM DE FERRO, E NÃO É O TONY STARK">
 
         </app-big-card>
     </div>
     <div class="articles__others">
         <app-small-card
+            Id = "2"
             photoCover="https://beecrowd.com/wp-content/uploads/2024/04/2023-09-19-C-sharp.jpg"
             cardTitle="C# É A LINGUAGEM MAIS UTILIZADA NO MUNDO">
         </app-small-card>
         <app-small-card
+            Id="3"
             photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGakkUEbXyfann4M16v9CV-sTa915cUOdh9g&s"
             cardTitle="APRENDA O FRAMEWORK ANGULAR">
-
         </app-small-card>
         <app-small-card
+            Id="4"
             photoCover="https://cdn.thenewstack.io/media/2022/01/10b88c68-typescript-logo.png"
             cardTitle="TIPOSCRIPT É A MELHOR LINGUAGEM PARA FRONT-END">
-
         </app-small-card>
     </div>
 </div>
