feat: Adding the card-label and card-pricing to use in my card

--- a/PlaystationStore/psn-store/src/app/components/menu-bar/menu-bar.html
+++ b/PlaystationStore/psn-store/src/app/components/menu-bar/menu-bar.html
@@ -1,6 +1,6 @@
 <div class="menu-bar__container">
     <div class="menu-bar__logo">
-        <img src="../   ../../../assets/ps-logo.png" alt="Playstation store logo" width="140px" height="32px">
+        <img src="../../../assets/ps-logo.png" alt="Playstation store logo" width="140px" height="32px">
     </div>
     <div class="menu-bar__item">
         <ul>
