feat: Ending the page

--- a/PlaystationStore/psn-store/src/app/pages/home/home.html
+++ b/PlaystationStore/psn-store/src/app/pages/home/home.html
@@ -1,3 +1,16 @@
 <div class="home__container">
-    <app-card></app-card>
+    <app-card
+     gameCover="assets/bt1.jpg"
+     gameLabel="Exclusive"
+     gameType="Digital PS4"
+     gamePrice="R$ 200.99"
+     >
+    </app-card>
+    <app-card
+     gameCover="assets/bt4.jpg"
+     gameLabel="Informamtive"
+     gameType="Digital XBOX"
+     gamePrice="R$ 159.99"
+     >
+    </app-card>
 </div>
