--- a/PlaystationStore/psn-store/src/app/components/card/card.css
+++ b/PlaystationStore/psn-store/src/app/components/card/card.css
@@ -8,9 +8,11 @@
     display: flex;
     overflow: hidden;
     margin-top: 10px;
+
+    margin-right: 50px;
 }
 
-.card__image {
+.card__img {
     min-width: 100%;
     min-height: 100%;
     transition: transform .8s;
