--- a/PlaystationStore/psn-store/src/app/components/menu-bar/menu-bar.css
+++ b/PlaystationStore/psn-store/src/app/components/menu-bar/menu-bar.css
@@ -7,38 +7,11 @@
     width: 100%;
     height: 40px;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .menu-bar__logo {
     margin-left: 30px;
-    display: flex;
-    align-items: center;
+        
 }
-
-.menu-bar__item {
-    display: flex;
-    margin: auto;
-    align-items: center;
-}
-
-.menu-bar__item > ul {
-    display: flex;
-    list-style: none;;
-}
-
-.menu-bar__item > ul > li {
-    margin-right: 15px;
-}
-
-.menu-bar__item > ul > li > a {
-    text-decoration: none;
-    padding: 5px;;
-    color: rgb(7, 7, 7);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.menu-bar__item > ul > li > a:hover {
-    color: blue;
-    font-weight: 500;
-}
-
