--- a/PlaystationStore/psn-store/src/app/components/menu-bar/menu-bar.html
+++ b/PlaystationStore/psn-store/src/app/components/menu-bar/menu-bar.html
@@ -1,12 +1,6 @@
 <div class="menu-bar__container">
     <div class="menu-bar__logo">
-        <img src="../../../assets/ps-logo.png" alt="Playstation store logo" width="140px" height="32px">
+        <img src="assets/psLogo.png" alt="Playstation store logo" width="140px" height="32px">
     </div>
-    <div class="menu-bar__item">
-        <ul>
-            <li><a href="#">YOUTUBE</a></li>
-            <li><a href="https://www.linkedin.com/in/vitor-manzano-345003305/">LINKEDIN</a></li>
-            <li><a href="https://github.com/vitormanzano">GITHUB</a></li>
-        </ul>
-    </div>
+    <app-menu-bar-item></app-menu-bar-item>
 </div>
